more consistent debugging info, and a fix for synthetic fields with getters/setters